--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,11 @@ dependencies:
   http: ^1.2.0
 
   # Flutter plugin for querying information about the application package, such as CFBundleVersion on iOS or versionCode on Android
-  package_info_plus: ^8.0.0
+  package_info_plus:
+    git:
+      url: git@github.com:Chralu/plus_plugins.git
+      path: packages/package_info_plus/package_info_plus
+      ref: Chralu/issue3028
 
 dev_dependencies:
   build_runner: ^2.4.5
